# functional-images

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: example.cpp
src/: CMakeLists.txt  bmp.cpp  bmp.hpp  color.cpp  color.hpp  coordinate.cpp  coordinate.hpp  functional.hpp  images.cpp  images.h  images.hpp
test/: CMakeLists.txt  functional_test.cpp  functional_test1.cpp  functional_test2.cpp  images_test1.cpp  images_test2.cpp  images_test3.cpp  images_test4.cpp  test.hpp
